--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "core-js": "^3.23.1",
     "vue": "^2.6.11",
     "vue-owl-carousel": "^2.0.3",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.1.6",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
