--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.23.1",
+    "sweetalert2": "^11.4.17",
     "vue": "^2.6.11",
     "vue-owl-carousel": "^2.0.3",
     "vue-router": "^3.1.6",
-    "vuex": "^4.0.2"
+    "vue-sweetalert2": "^5.0.5",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
